# Hack-Nation-Hackathon-2k26

./: README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  pyproject.toml
backend/corporate-retreat-agent/: agent_cart.py  agent_checkout.py  agent_discovery.py  agent_ranking.py  agent_requirements.py  config.py  crew_orchestrator.py  interactive.py  main.py  models.py  requirements.txt  run_custom.py
backend/scripts/: real_test_e2e.py  test_e2e_agents.py
backend/src/: __init__.py  config.py  main.py
backend/src/agents/: __init__.py  cart_agent.py  checkout_agent.py  discovery_agent.py  ranking_agent.py  requirements_analyst.py
backend/src/crew/: __init__.py  retreat_crew.py
backend/src/models/: __init__.py  requests.py  responses.py
backend/src/services/: __init__.py  scoring_service.py  tavily_service.py
backend/src/utils/: __init__.py  validators.py
